fix #2090 replace with g1gc